--- a/NBA Game Predictions - Final Report.ipynb
+++ b/NBA Game Predictions - Final Report.ipynb
@@ -348,7 +348,7 @@
    "source": [
     "<a id='Adding Time-Sesitive Features'></a>\n",
     "### 2B. Adding Time Sensitive Features\n",
-    "Continue adding to our dataframe (4-15 in the list above). We use N = 8 as our lookback parameter (discused in the next section)."
+    "Continue adding to our dataframe (4-15 in the list above). We use N = 11 as our lookback parameter (choice of N is discused in the section [4B](#N-Previous Games))."
    ]
   },
   {
@@ -359,7 +359,7 @@
    },
    "outputs": [],
    "source": [
-    "def add_variable_features(league_df, N=8):\n",
+    "def add_variable_features(league_df, N=11):\n",
     "    \"\"\" Given a dataframe league_df, returns a new df containing extra columns for each new feature.\n",
     "        If new_years = true, adds features that only work for data frames containing data >= 2005\n",
     "    Input:\n",
@@ -1791,8 +1791,61 @@
    },
    "outputs": [],
    "source": [
-    "mileage_df = add_mileage(all_games[all_games['season_id']>='22005'])\n",
-    "mileage_df.tail()"
+    "mileage_df = add_mileage(temp_df)#all_games[all_games['season_id']>='22005'])\n",
+    "mileage_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cutoff = 10\n",
+    "df_with_elev_mileage = mileage_df\n",
+    "df_with_elev_mileage = df_with_elev_mileage[df_with_elev_mileage['is_home']==1]\n",
+    "df_with_elev_mileage_with_cutoff = df_with_elev_mileage[df_with_elev_mileage['home_game_count'] >= cutoff]\n",
+    "home_games_2005 = home_games[home_games['season_id'] >= '22005']\n",
+    "home_games_with_cutoff = home_games_2005[home_games_2005['home_game_count'] >= cutoff]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#print home_games_with_cutoff.head()\n",
+    "#print df_with_elev_mileage_with_cutoff.head()\n",
+    "print len(home_games_with_cutoff)\n",
+    "print len(df_with_elev_mileage_with_cutoff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# final_csv = add_lookback_features(mileage_df, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15])\n",
+    "# pd.DataFrame.to_csv(final_csv, 'final_csv_1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#final_csv.tail(10)"
    ]
   },
   {
@@ -1801,7 +1854,7 @@
    "source": [
     "<a id='Modeling'></a>\n",
     "## 6. Modeling\n",
-    "We are finally ready to do some predictions! We train our models on 2005-06 to 2009-10 (5 seasons - 5393 games) and we validate on 2010-11 to 2012-13 (3 seasons - 3450 games). Note that code for Linear Regression and Logistic Regression is in the R file."
+    "We are finally ready to do some predictions! We train our models on 2005-06 to 2009-10 (5 seasons - 5393 games) and we validate on 2010-11 to 2012-13 (3 seasons - 3450 games). We test on 2013-14 to 2015-16 (3 season- 3450 games). Note that code for Linear Regression and Logistic Regression is in the R file."
    ]
   },
   {
@@ -1817,7 +1870,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1852,7 +1905,7 @@
     "        \n",
     "    return correct/float(total)\n",
     "\n",
-    "print naive_approach_accuracy(home_games,[\"22010\",\"22011\",\"22012\"])\n",
+    "print naive_approach_accuracy(home_games,[\"22010\",\"22011\",\"22012\",])\n",
     "    \n",
     "def graph_naive(home_games_df):\n",
     "    \"\"\" Given a df containing ALL HOME game logs, \n",
@@ -1908,13 +1961,13 @@
     "- away_back_to_back*away_win_pct_as_away\n",
     "- elevation\n",
     "- elevation*home_win_pct_as_home\n",
-    "- home_mileage\n",
     "\n",
-    "Note that we decided to not include certain features. We noticed that `home_avg_pt_diff` and `away_avg_pt_diff` both had very high multicollinearity (r-squared = 0.98) against `home_win_pct` and `away_win_pct`, repectively, we disregarded these features. `home_avg_pt_diff` and `away_avg_pt_diff`.\n",
+    "Note that we decided to not include certain features. We noticed that `home_avg_pt_diff` and `away_avg_pt_diff` both had very high multicollinearity (r-squared = 0.98) against `home_win_pct` and `away_win_pct`, repectively, we disregarded these features. `home_avg_pt_diff` and `away_avg_pt_diff`. We also disregard travel distance, as it did almost nothing in terms of accuracy on our validation set.\n",
     "In addition we added interaction terms between `away_back_to_back` and `away_win_pct_as_away` as well as `elevation` and `home_win_pct_as_home`.\n",
     "We checked that our model followed linear assumptions by checking residual plots against each feature as well as a Q-Q plot for normality assumptions. A lambda value of 1 in a boxcox shows that there is no need to transform our response variable.\n",
     "<img src=\"resids2.png\"> <img src=\"qqandboxcox.png\">\n",
-    "\n"
+    "\n",
+    "Using Linear Regresion, we get an accuracy of 67.22% on our test set."
    ]
   },
   {
@@ -1926,7 +1979,19 @@
     "Our second approach is using a binary logistic regression model. Our response variable is win or loss.\n",
     "\n",
     "To predict win/loss, we use the following features:\n",
-    "- "
+    "\n",
+    "- home_win_pct\n",
+    "- away_win_pct\n",
+    "- home_win_pct_N \n",
+    "- away_win_pct_N\n",
+    "- home_back_to_back\n",
+    "- away_back_to_back\n",
+    "- home_win_pct_as_home\n",
+    "- away_win_pct_as_away\n",
+    "- away_back_to_back:away_win_pct_as_away\n",
+    "- elevation\n",
+    "\n",
+    "Using Logistic Regression, we get an accuracy of 66.45% on our test set."
    ]
   },
   {
@@ -1948,19 +2013,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# home games\n",
     "# divide into training set, validation set, test set\n",
     "\n",
-    "training_set = df_with_elev_mileage_with_cutoff[(home_games_with_cutoff['season_id'] >= \"22005\") &\n",
-    "                                        (home_games_with_cutoff['season_id'] <= \"22009\")]\n",
+    "training_set = df_with_elev_mileage_with_cutoff[(home_games_with_cutoff['season_id'] >= \"22005\") & \n",
+    "                                                (home_games_with_cutoff['season_id'] <= \"22009\")]\n",
     "validation_set = df_with_elev_mileage[(home_games['season_id'] >= \"22010\") & \n",
-    "                            (home_games['season_id'] <= \"22012\")]\n",
+    "                                      (home_games['season_id'] <= \"22012\")]\n",
     "test_set = df_with_elev_mileage[(home_games['season_id'] >= \"22013\") & \n",
-    "                      (home_games['season_id'] <= \"22016\")]\n",
+    "                                (home_games['season_id'] <= \"22016\")]\n",
     "\n",
     "def normalize(df, param_labels):\n",
     "    \"\"\" Given a df containing game logs to be normalized, returns a new normalized dataframe\n",
@@ -2031,10 +2096,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "from sklearn.svm import LinearSVC, SVC\n",
     "# Run SVM\n",
     "clf = SVC(C=1e4, kernel='linear')\n",
     "clf1 = SVC(C = 2**(3), gamma = 2**(-15), kernel = 'linear')\n",
@@ -2049,20 +2115,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "valid_pred = clf.predict(validation_matrix)\n",
-    "valid_pred2 = clf2.predict(validation_matrix)\n",
-    "valid_pred3 = clf3.predict(validation_matrix)"
+    "valid_pred2 = clf1.predict(validation_matrix)\n",
+    "valid_pred3 = clf2.predict(validation_matrix)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -2146,18 +2212,18 @@
     "  </tr>\n",
     "  <tr>\n",
     "    <td>Naive Approach</td>\n",
-    "    <td>Maria Anders</td>\n",
-    "    <td>Germany</td>\n",
+    "    <td>64.81%</td>\n",
+    "    <td>66.34%</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <td>Linear Regression</td>\n",
-    "    <td>Francisco Chang</td>\n",
-    "    <td>Mexico</td>\n",
+    "    <td>67.69%</td>\n",
+    "    <td>67.27%</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <td>Logistic Regression</td>\n",
-    "    <td>Roland Mendel</td>\n",
-    "    <td>Austria</td>\n",
+    "    <td>67.15%</td>\n",
+    "    <td>66.45%</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <td>Support Vector Machines</td>\n",
