--- a/NBA Game Predictions - Final Report.ipynb
+++ b/NBA Game Predictions - Final Report.ipynb
@@ -269,8 +269,7 @@
    "metadata": {},
    "source": [
     "<a id='Preprocessing'></a>\n",
-    "### 2A. Preprocessing Constant Features\n",
-    "First add the constant features (1-3 in the above list)"
+    "### 2A. Preprocessing Constant Features"
    ]
   },
   {
@@ -283,13 +282,16 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "# First add the constant features (1-3 in the above list)\n",
     "def add_constant_features(league_df):\n",
     "    \"\"\" Given a dataframe league_df, returns new league_df by converting the 'game_date' column to datetime if \n",
-    "    necessary, and adds is_home indicator, opp_team_id, and wl_binary indicator\n",
+    "    necessary, and adds is_home indicator, opp_team_id, and wl_binary indicator. \n",
     "    Input:\n",
     "        league_df (pandas.DataFrame): dataframe containing league logs\n",
     "    Output:\n",
-    "        pd.DataFrame\n",
+    "        pd.DataFrame with added variables: 1. is_home (1 if the team is playing at home, 0 otherwise)\n",
+    "                                           2. opp_team_id (opposing team identifier)\n",
+    "                                           3. wl_binary (1 if the team won, 0 otherwise)\n",
     "    \"\"\"\n",
     "    # Convert to datetime, note that this is in place\n",
     "    league_df['game_date'] = league_df['game_date'].apply(pd.to_datetime)\n",
@@ -348,7 +350,7 @@
    "source": [
     "<a id='Adding Time-Sesitive Features'></a>\n",
     "### 2B. Adding Time Sensitive Features\n",
-    "Continue adding to our dataframe (4-15 in the list above). We use N = 11 as our lookback parameter (choice of N is discused in the section [4B](#N-Previous Games))."
+    "We use N = 11 as our lookback parameter (choice of N is discused in the section [4B](#N-Previous Games))."
    ]
   },
   {
@@ -359,14 +361,26 @@
    },
    "outputs": [],
    "source": [
-    "def add_variable_features(league_df, N=11):\n",
+    "# Continue adding to our dataframe (4-15 in the list above). \n",
+    "def add_variable_features(league_df, N=8):\n",
     "    \"\"\" Given a dataframe league_df, returns a new df containing extra columns for each new feature.\n",
     "        If new_years = true, adds features that only work for data frames containing data >= 2005\n",
     "    Input:\n",
     "        league_df (pandas.DataFrame): dataframe containing league logs\n",
     "        N (int): lookback parameter\n",
     "    Output:\n",
-    "        pd.DataFrame\n",
+    "        pd.DataFrame with added variables: 4. home_win_pct (win percentage of the home team prior to the current game)\n",
+    "                                           5. away_win_pct (win percentage of the away team prior to the current game)\n",
+    "                                           6. home_avg_pt_diff (average pt differential of the home team prior to the current game)\n",
+    "                                           7. away_avg_pt_diff (average pt differential of the away team prior to the current game)\n",
+    "                                           8. home_win_pct_N (win percentage of the home team in last N games prior to the current game)\n",
+    "                                           9. away_win_pct_N (win percentage of the away team in last N games prior to the current game)\n",
+    "                                           10. home_win_pct_as_home (win percentage of the home team as home prior to the current game)\n",
+    "                                           11. away_win_pct_as_away (win percentage of the away team as away prior to the current game)\n",
+    "                                           12. home_back_to_back (1 if the home team just played the day prior, 0 otherwise)\n",
+    "                                           13. away_back_to_back (1 if the away team just played the day prior, 0 otherwise)\n",
+    "                                           14. home_game_count (# games the home team as played prior to the current game)\n",
+    "                                           15. away_game_count (# games the away team as played prior to the current game)\n",
     "    \"\"\"    \n",
     "    lookback = N\n",
     "    new_df = league_df.sort_values('game_date')\n",
@@ -591,10 +605,6 @@
     "                running_date_dict[team_id].append(game_date)\n",
     "                running_date_dict[opp_team_id].append(game_date)\n",
     "                \n",
-    "#                 if (new_years):\n",
-    "#                     running_locations[home_team_id].append(curr_location)\n",
-    "#                     running_locations[away_team_id].append(curr_location)\n",
-    "                \n",
     "            seen_games.add(game_id)\n",
     "    return new_df"
    ]
@@ -662,7 +672,7 @@
    "source": [
     "<a id='Bivariate Analysis'></a>\n",
     "### 3B. Bivariate Analysis\n",
-    "Based on personal intuition and understanding of the NBA, we listed out some variables that we wanted to explore, knowing that these variables could be important factors in predicting our response. For the following variables, we explored bivariate scatterplots, graphing the home team's data on the y axis against the away team's data on the x axis. For our plots concerning the home and away win/loss percentage in the previous N games, we choose 8 games for the purpose of these graphs. A more detailed analysis on how we pick N is discussed in a different section.\n",
+    "Based on intuition and understanding of the NBA, we listed out some variables that we wanted to explore, knowing that these variables could be important factors in predicting our response. For the following variables, we explored bivariate scatterplots, graphing the home team's data on the y axis against the away team's data on the x axis. For our plots concerning the home and away win/loss percentage in the previous N games, we choose 8 games as an example for these graphs. A more detailed analysis on how we pick N is discussed in a different section.\n",
     "\n",
     "1. Home W/L Percentage\n",
     "2. Away W/L Percentage\n",
@@ -1277,8 +1287,7 @@
     "### 4B. Lookback Parameter (N) Tuning\n",
     "A crucial parameter in our model is our lookback parameter, which is used in the calcation of the `home_win_pct_N` and `away_win_pct_N` features. The idea behind these features is that team performance may be streaky. Further, team dynamics change throughout the season, i.e. through injuries and roster changes. Thus, it is important to not only consider team performance throughout the entire season, but also the recent team performance.\n",
     "\n",
-    "Naturally, we might ask: if we predicted game results solely on recent game performance, how well would we do for different `N`? By comparing these results, we can\n",
-    "isolate the lookback variable and do simple comparisons between different parameter values. We note that this approach was inspired from work from Amorim Torres [1]. "
+    "Given our current model, we compare using different N values and do comparisons between the results. We note that this approach was inspired from work from Amorim Torres [1]. "
    ]
   },
   {
@@ -1854,7 +1863,7 @@
    "source": [
     "<a id='Modeling'></a>\n",
     "## 6. Modeling\n",
-    "We are finally ready to do some predictions! We train our models on 2005-06 to 2009-10 (5 seasons - 5393 games) and we validate on 2010-11 to 2012-13 (3 seasons - 3450 games). We test on 2013-14 to 2015-16 (3 season- 3450 games). Note that code for Linear Regression and Logistic Regression is in the R file."
+    "We train our models on 2005-06 to 2009-10 (5 seasons - 5393 games) and we validate on 2010-11 to 2012-13 (3 seasons - 3450 games). Note that code for Linear Regression and Logistic Regression is in the R file."
    ]
   },
   {
@@ -1863,7 +1872,7 @@
    "source": [
     "<a id='Naive Approach'></a>\n",
     "### 6A. Naive Approach\n",
-    "The naive approach is to choose the team with the better record so far. If the records are the same, we will classify the home team as the winner."
+    "Choose the team with the better record so far. If the records are tied, choose the home team as the winner."
    ]
   },
   {
@@ -2231,6 +2240,17 @@
     "    <td>UK</td>\n",
     "  </tr>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further Studies\n",
+    "\n",
+    "Further investigation could include predicting the NBA playoffs, which is a lot more complex because it looks at best-of-seven game series rather than individual games. The result of each round changes future round matchups. Based on the result of each round, certain teams might play fewer games and have more time in between series to rest for future games. Additionally, home court advantage may have a lot greater effect in the post-season, and the variability in skill level of the teams is a lot smaller due to only the top 8 teams in each conference making the playoffs. \n",
+    "\n",
+    "Another study could be done on college basketball and March Madness, which is a lot harder to predict due to its rapidly changing nature and frequent upsets."
    ]
   },
   {
