--- a/NBA Game Predictions - Final Report.ipynb
+++ b/NBA Game Predictions - Final Report.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NBA Game Predictions - Final Report\n",
-    "## Kevin Yang, Eric Lee, Derek Young\n"
+    "# Predicting NBA Games - Final Report\n",
+    "## Kevin Yang (kzy), Eric Lee (el1), Derek Young (dsyoung)"
    ]
   },
   {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +341,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
     "start_year = 1946\n",
     "length = 2017 - start_year\n",
     "\n",
-    "load_all_gamelogs(conn, start_year, length)\n",
+    "#load_all_gamelogs(conn, start_year, length)\n",
     "\n",
     "# Load newly stored data into pandas DataFrame league_df\n",
     "league_df = pd.read_sql_query('SELECT * FROM league_log', conn)\n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1171,7 +1171,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
