renamed img files

--- a/NBA Game Predictions - Final Report.ipynb
+++ b/NBA Game Predictions - Final Report.ipynb
@@ -689,7 +689,7 @@
     "- most games are not back to back\n",
     "- there are two teams (Denver Nuggets and Utah Jazz) that have stadiums at very high elevations\n",
     "- it is more common for a team to travel relatively shorter distances than longer distances (right skewed distributions for both `home_mileage` and `away_mileage`\n",
-    "<img src=\"img/univariate.png\">"
+    "<img src=\"files/img/univariate.png\">"
    ]
   },
   {
@@ -775,7 +775,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"img/WinLoss.png\", width = 500, height = 500>"
+    "<img src=\"files/img/WinLoss.png\", width = 500, height = 500>"
    ]
   },
   {
@@ -828,7 +828,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"img/AvgPtDiff.png\", width = 500, height = 500>"
+    "<img src=\"files/img/AvgPtDiff.png\", width = 500, height = 500>"
    ]
   },
   {
@@ -880,7 +880,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"img/WinLossLastN.png\", width = 500, height = 500>"
+    "<img src=\"files/img/WinLossLastN.png\", width = 500, height = 500>"
    ]
   },
   {
@@ -932,7 +932,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"img/HomeAsHome.png\", width = 500, height = 500>"
+    "<img src=\"files/img/HomeAsHome.png\", width = 500, height = 500>"
    ]
   },
   {
@@ -2070,7 +2070,7 @@
     "Note that we decided to not include certain features. We noticed that `home_avg_pt_diff` and `away_avg_pt_diff` both had very high multicollinearity (r-squared = 0.98) against `home_win_pct` and `away_win_pct`, repectively, we disregarded these features. `home_avg_pt_diff` and `away_avg_pt_diff`. We also disregard travel distance, as it did almost nothing in terms of accuracy on our validation set.\n",
     "In addition we added interaction terms between `away_back_to_back` and `away_win_pct_as_away` as well as `elevation` and `home_win_pct_as_home`.\n",
     "We checked that our model followed linear assumptions by checking residual plots against each feature as well as a Q-Q plot for normality assumptions. A lambda value of 1 in a boxcox shows that there is no need to transform our response variable.\n",
-    "<img src=\"img/resids2.png\"> <img src=\"img/qqandboxcox.png\">\n",
+    "<img src=\"files/img/resids2.png\"> <img src=\"files/img/qqandboxcox.png\">\n",
     "\n",
     "Using Linear Regresion, we get an accuracy of 67.22% on our test set."
    ]
