renamed img files to lowercase

--- a/NBA Game Predictions - Final Report.ipynb
+++ b/NBA Game Predictions - Final Report.ipynb
@@ -775,7 +775,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"files/img/WinLoss.png\", width = 500, height = 500>"
+    "<img src=\"files/img/win_loss.png\", width = 500, height = 500>"
    ]
   },
   {
@@ -828,7 +828,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"files/img/AvgPtDiff.png\", width = 500, height = 500>"
+    "<img src=\"files/img/avg_pt_diff.png\", width = 500, height = 500>"
    ]
   },
   {
@@ -880,7 +880,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"files/img/WinLossLastN.png\", width = 500, height = 500>"
+    "<img src=\"files/img/win_loss_last_n.png\", width = 500, height = 500>"
    ]
   },
   {
@@ -932,7 +932,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"files/img/HomeAsHome.png\", width = 500, height = 500>"
+    "<img src=\"files/img/home_as_home.png\", width = 500, height = 500>"
    ]
   },
   {
@@ -1936,8 +1936,6 @@
    },
    "outputs": [],
    "source": [
-    "#print home_games_with_cutoff.head()\n",
-    "#print df_with_elev_mileage_with_cutoff.head()\n",
     "print len(home_games_with_cutoff)\n",
     "print len(df_with_elev_mileage_with_cutoff)"
    ]
@@ -2024,10 +2022,7 @@
     "    for season in season_list:\n",
     "        season_df = league_df[league_df['season_id'] == season]\n",
     "        naives.append(naive_approach_accuracy(home_games_df, [season]))\n",
-    "        #pt_diff = season_df['plus_minus'].values\n",
-    "        #pt_diff = np.apply_along_axis(lambda x: np.abs(x), 0, pt_diff)\n",
     "        seasons.append(int(season[1:]))\n",
-    "        #avg_pt_diffs.append(np.mean(pt_diff))\n",
     "    fig = plt.figure()\n",
     "    fig.suptitle('Naive Classification Accuracy',fontsize=12)\n",
     "    plt.xlabel('Season Starting Year')\n",
