trying raw file

--- a/NBA Game Predictions - Final Report.ipynb
+++ b/NBA Game Predictions - Final Report.ipynb
@@ -775,7 +775,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"files/img/win_loss.png\", width = 500, height = 500>"
+    "<img src=\"files/img/win_loss.png?raw=true\", width = 500, height = 500>"
    ]
   },
   {
