--- a/NBA Game Predictions - Final Report.ipynb
+++ b/NBA Game Predictions - Final Report.ipynb
@@ -828,7 +828,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"files/img/avg_pt_diff.png\", width = 500, height = 500>"
+    "<img src=\"files/img/avg_pt_diff_copy.png\">"
    ]
   },
   {
@@ -880,7 +880,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"files/img/win_loss_last_n.png\", width = 500, height = 500>"
+    "<img src=\"files/img/win_loss_last_n.png\">"
    ]
   },
   {
@@ -932,7 +932,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"files/img/home_as_home.png\", width = 500, height = 500>"
+    "<img src=\"files/img/home_as_home.png\">"
    ]
   },
   {
